# Taskig

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
TaskigCLITool/: CMakeLists.txt
TaskigCLITool/src/CacheUtils/: CacheUtils.hpp
TaskigCLITool/src/Commands/: Args.hpp
TaskigCLITool/src/GitUtils/: GitUtils.cpp
TaskigCLITool/src/TaskScan/: TaskScan.hpp
TaskigVSCodeExtension/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
TaskigVSCodeExtension/src/: extension.ts
src/: main.cpp
src/CacheUtils/: CacheUtils.cpp  CacheUtils.hpp
src/Commands/: Args.cpp
src/Commands/Scan/: Scan.cpp  Scan.hpp
src/GitUtils/: GitUtils.hpp
src/Task/: Task.hpp
src/TaskScan/: TaskScan.cpp  TaskScan.hpp
src/cacheUtils/: cacheUtils.cpp  cacheUtils.hpp
src/commands/: args.cpp  args.hpp
src/commands/scan/: scan.cpp  scan.hpp
src/taskScan/: taskScan.cpp  taskScan.hpp
